avoid "NA %" and "NA bp" in HTML report

--- a/src/reports_template.html
+++ b/src/reports_template.html
@@ -212,23 +212,23 @@
                     </tr>
                     <tr>
                         <td>Read length</td>
-                        <td>[[LENGTHS]] bp</td>
+                        <td>[[LENGTHS]]</td>
                     </tr>
                     <tr>
                         <td>Q20</td>
-                        <td>[[Q20]] %</td>
+                        <td>[[Q20]]</td>
                     </tr>
                     <tr>
                         <td>Q30</td>
-                        <td>[[Q30]] %</td>
+                        <td>[[Q30]]</td>
                     </tr>
                     <tr>
                         <td>GC</td>
-                        <td>[[GC]] %</td>
+                        <td>[[GC]]</td>
                     </tr>
                     <tr>
                         <td>N</td>
-                        <td>[[NS]] %</td>
+                        <td>[[NS]]</td>
                     </tr>
                 </tbody>
             </table>
@@ -614,7 +614,7 @@
                             <td>{{PCT}}</td>
                             <td>{{READS}}</td>
                             <td>{{BP}}</td>
-                            <td>{{LENGTH}} bp</td>
+                            <td>{{LENGTH}}</td>
                             <td>{{GC}} %</td>
                         </tr>
 
