typos and other inconsistencies

--- a/src/reports_template.html
+++ b/src/reports_template.html
@@ -576,7 +576,7 @@
 
       <!-- TEMPLATE: CONSENSUS_ADAPTER_KMER_HEAD -->
       <h4 id="analyses-top-kmers">
-        Top {{N_KMERS}} most common {{KMER_LENGTH}}-bp 5' adapter k-mers <a class="anchor"
+        Top {{N_KMERS}} most common {{KMER_LENGTH}}-bp 5' adapter kmers <a class="anchor"
           href="#analyses-top-kmers">#</a>
       </h4>
 
