support custom titles for HTML report

--- a/src/reports_template.html
+++ b/src/reports_template.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset='utf-8'>
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-  <title>{{NAME}} {{VERSION}}</title>
+  <title>{{TITLE}}</title>
   <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/purecss@2.1.0/build/pure-min.css'
     integrity='sha384-yHIFVG6ClnONEA5yB5DJXfW2/KC173DIQrYoZMEtBvGzmf0PKiGyNEqe9N6BNDBH' crossorigin='anonymous'>
   <script>
@@ -398,7 +398,7 @@
 <body onload="loadVegaPlots()">
   <div id='layout'>
     <div class="title">
-      <h1>AdapterRemoval</h1>
+      <h1>{{TITLE}}</h1>
     </div>
 
     <!-- TEMPLATE: SUMMARY -->
