add escape hatch for injection of raw values into report

--- a/src/reports_template.html
+++ b/src/reports_template.html
@@ -482,7 +482,7 @@
 
       <!-- TEMPLATE: OUTPUT_FOOTNOTE -->
 
-      <p class="note"><b>{{SYMBOL}}</b> {{TEXT}}</p>
+      <p class="note"><b>{{SYMBOL}}</b> {{RAW_HTML}}</p>
 
       <!-- TEMPLATE: SUMMARY_TRIMMING_HEAD -->
       <h4 id="summary-process">
@@ -725,9 +725,9 @@
 
             <tr>
               <td>{{N}}</td>
-              <td>{{BARCODE_1}}</td>
-              <td>{{BARCODE_2}}</td>
-              <td>{{NAME}}</td>
+              <td>{{RAW_BARCODE_1}}</td>
+              <td>{{RAW_BARCODE_2}}</td>
+              <td>{{RAW_NAME}}</td>
               <td>{{PCT}}</td>
               <td>{{READS}}</td>
               <td>{{BP}}</td>
